--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@headlessui/react": "1.6.6",
     "@heroicons/react": "1.0.6",
     "@reduxjs/toolkit": "1.7.1",
+    "@tanstack/react-query": "4.0.10",
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
     "@types/fontfaceobserver": "2.1.0",
@@ -44,7 +45,6 @@
     "react-dom": "18.1.0",
     "react-helmet-async": "1.3.0",
     "react-is": "18.1.0",
-    "react-query": "4.0.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
     "react-test-renderer": "18.1.0",
