--- a/package.json
+++ b/package.json
@@ -120,10 +120,16 @@
         "lines": 90,
         "statements": 90
       }
+    },
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "identity-obj-proxy"
     }
   },
   "devDependencies": {
     "autoprefixer": "10.4.7",
+    "css-loader": "6.7.1",
+    "identity-obj-proxy": "3.0.0",
     "postcss": "8.4.14",
     "tailwindcss": "3.1.6"
   }
