--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://app.bibleflow.com/",
   "dependencies": {
     "@headlessui/react": "1.6.6",
     "@heroicons/react": "1.0.6",
