--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react-hooks": "4.3.0",
     "fontfaceobserver": "2.1.0",
+    "html-react-parser": "3.0.1",
     "husky": "7.0.4",
     "i18next-browser-languagedetector": "6.1.2",
     "i18next-scanner": "3.1.0",
@@ -46,7 +47,7 @@
     "react-dom": "18.1.0",
     "react-helmet-async": "1.3.0",
     "react-is": "18.1.0",
-    "react-router-dom": "5.2.0",
+    "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
     "react-test-renderer": "18.1.0",
     "react-toastify": "9.0.7",
