--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,30 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "assets/logo.png",
-      "type": "image/png",
-      "sizes": "1024x1024"
-    }
-  ],
-  "start_url": ".",
+  "short_name": "BibleFlow",
+  "name": "Bible Timeline Studytool",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#841FFF",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "icons": [
+    {
+      "src": "/assets/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/icon-256x256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
