--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": "https://app.bibleflow.com/",
   "dependencies": {
+    "@dnd-kit/core": "6.0.5",
+    "@dnd-kit/sortable": "7.0.1",
     "@headlessui/react": "1.6.6",
     "@heroicons/react": "1.0.6",
     "@reduxjs/toolkit": "1.7.1",
@@ -24,6 +26,7 @@
     "@types/testing-library__jest-dom": "5.14.2",
     "@types/webpack": "5.28.0",
     "@types/webpack-env": "1.16.3",
+    "array-move": "4.0.0",
     "axios": "0.27.2",
     "chalk": "4.1.2",
     "cross-env": "7.0.3",
@@ -45,10 +48,13 @@
     "react": "18.1.0",
     "react-app-polyfill": "3.0.0",
     "react-dom": "18.1.0",
+    "react-draggable-list": "4.0.4",
     "react-helmet-async": "1.3.0",
     "react-is": "18.1.0",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
+    "react-sortable": "2.0.0",
+    "react-sortable-hoc": "2.0.0",
     "react-test-renderer": "18.1.0",
     "react-toastify": "9.0.7",
     "redux-saga": "1.1.3",
