--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://app.bibleflow.com/",
   "dependencies": {
     "@dnd-kit/core": "6.0.5",
+    "@dnd-kit/modifiers": "6.0.0",
     "@dnd-kit/sortable": "7.0.1",
     "@headlessui/react": "1.6.6",
     "@heroicons/react": "1.0.6",
