--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-dom": "18.1.0",
     "react-draggable-list": "4.0.4",
     "react-helmet-async": "1.3.0",
+    "react-intersection-observer": "9.4.0",
     "react-is": "18.1.0",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
