--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": "https://app.bibleflow.com/",
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "34.2.0",
+    "@ckeditor/ckeditor5-react": "5.0.2",
     "@dnd-kit/core": "6.0.5",
     "@dnd-kit/modifiers": "6.0.0",
     "@dnd-kit/sortable": "7.0.1",
@@ -59,6 +61,7 @@
     "react-sortable": "2.0.0",
     "react-sortable-hoc": "2.0.0",
     "react-test-renderer": "18.1.0",
+    "react-textarea-autosize": "8.3.4",
     "react-toastify": "9.0.7",
     "redux-saga": "1.1.3",
     "rimraf": "3.0.2",
