--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "bibleflow",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://app.bibleflow.com/",
@@ -52,7 +52,7 @@
     "react": "18.1.0",
     "react-app-polyfill": "3.0.0",
     "react-dom": "18.1.0",
-    "react-draggable-list": "4.0.4",
+    "react-draggable-list": "4.1.0",
     "react-helmet-async": "1.3.0",
     "react-intersection-observer": "9.4.0",
     "react-is": "18.1.0",
